update more files, fix overlapping mainmenufooter

--- a/play.pokemonshowdown.com/style/client.css
+++ b/play.pokemonshowdown.com/style/client.css
@@ -606,6 +606,7 @@ p.or:after {
 	position: absolute;
 	left: 325px;
 	top: 40px;
+	z-index: 1;
 }
 .mainmenu {
 	padding: 0 0 51px 0;
@@ -630,6 +631,7 @@ p.or:after {
 	left: 20px;
 	color: #BBBBBB;
 	text-shadow: 0 0 3px black, 0 0 3px black, 0 0 3px black;
+	z-index: 0;
 }
 .mainmenufooter blockquote {
 	margin: 0 0 1em 0;
