--- a/play.pokemonshowdown.com/style/client2.css
+++ b/play.pokemonshowdown.com/style/client2.css
@@ -733,6 +733,7 @@ p.or:after {
 	padding: 0 0 15px 20px;
 	color: #BBBBBB;
 	text-shadow: 0 0 3px black, 0 0 3px black, 0 0 3px black;
+	z-index: 0;
 }
 .mainmenu-footer blockquote {
 	margin: 0 0 1em 0;
